# Injo_llm

./: .gitignore  README.md  pyproject.toml
experiments/model_compare/: main.py  single_turn.py
experiments/model_compare/configs/: configs.yaml  data.yaml
experiments/model_compare/configs/prompts/: liar.txt
injo_llm/: __init__.py  base.py
injo_llm/base/: azure.py  base.py  openai.py  rag.py
injo_llm/langchain/: base.py
injo_llm/models/: base.py  factory.py  langchain.py  models.py  rag.py
injo_llm/prompts/: __init__.py  library.py  messages.py  prompts.py  retrieval.py
injo_llm/test/: agent_test.py  rag_test.py
injo_llm/tools/: __init__.py
injo_llm/tools/model_compare/: text.py
injo_llm/utils/: prompt.py
server/: client.py  llm.py  server.py
src/text/: __init__.py
src/text/models/: base.py  embedding.py  factory.py  models.py  rag.py
src/text/prompts/: __init__.py  messages.py  prompts.py
src/text/test/: base_test.py  llama3_test.py  model_compare_test.py  rag_test.py  text_model_compare.py
src/text/tools/: __init__.py  model_compare.py  rag.py
template/: base.ipynb
test/: azure_test.py  base_llm_test.py  base_test.py  llama3_test.py  rag_test.py  templatellm_test.py
