[tool.poetry]
name = "injo-llm"
version = "0.1.0"
description = ""
authors = ["Kiminjo <deulseong1121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
langchain = "^0.1.14"
langchain-openai = "^0.1.1"
black = "^24.3.0"
faiss-cpu = "^1.8.0"
openai = "^1.17.1"
wikipedia = "^1.4.0"
numexpr = "^2.10.0"
groq = "^0.5.0"
langchain-community = "^0.0.36"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
